--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--divi i majte-->
        <div>
 <h1 class="bardhe">Get a quote</h1>
-<p class="bardhe">Fill up the form and our team will get back <br> to you within 24 hours</p>
+<p class="kaft">Fill up the form and our team will get back <br> to you within 24 hours</p>
 
 <!--pjesa e mesme-->
 <div class="telefoni">
@@ -39,16 +39,20 @@
 </div>
 
 <!--divi i djathte-->
-<div>
+<div id="rightside">
 <form action="#"></form>
-    <label for="Name">Name</label>
+    <label for="Name">Name</label><br>
     <input type="text">
     <br>
-    <label for="Mail">Mail</label>
+    <label for="Mail">Mail</label><br>
     <input type="text">
     <br>
-    <label for="Message">Message</label>
+    <label for="Message">Message</label><br>
     <textarea name="Message" cols="30"></textarea>
+<br><br>
+    <div id="butoni">
+        <p>send messeage</p>
+    </div>
 </div>
 <!--fundi i divit kryesore-->
      </div>
